<resources>
    <string name="app_name">Game</string>
    <string name="Option">Settings</string>
    <string name="Red">Red_Colour</string>
    <string name="Gray">Gray_Colour</string>
    <string name="language_select">Select a Language</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid account name</string>
    <string name="login_failed">"Login failed"</string>
    <string name="select_account">"Select Account"</string>
    <string name="create_account">"Create Account"</string>
    <string name="back">"Back"</string>
    <string name="next1">"To Game Two"</string>
    <string name="next2">"To Game Three"</string>
    <string name="next3">"To Main Menu"</string>
    <string name="game1_shop">Shop</string>
    <string name="game1_customize">Customize</string>
    <string name="game1_play">Play</string>
    <string name="game1_chooseBall">Choose Ball</string>
    <string name="game1_changeSong">Change Song</string>
    <string name="game1_comingSoon">Coming soon....</string>
    <string name="game1_xButton">X</string>
    <string name="account_already_exists">Account already exists with given name</string>
    <string name="account_created">Account successfully created</string>
    <string name="username">Username</string>
    <string name="game3_play">Play</string>
    <string name="gane1_retry">Retry</string>
    <string name="game1_Home">Home</string>
    <string name="START_Riddles_Game">"START Riddles Game"</string>
    <string name="Nope">"Nope...wanna try again?"</string>
    <string name="Back_to_Riddle">"Back to the Riddle"</string>
    <string name="Congratulations">"Congratulations!!!"</string>
    <string name="Riddle1">"Which of these is the largest number?"</string>
    <string name="Riddle2">"What is the driest place on Earth?"</string>
    <string name="Riddle3">"Which answer is correct?"</string>
    <string name="A1">"Sextillion"</string>
    <string name="A2">"Centillion"</string>
    <string name="A3">"Googol"</string>
    <string name="A4">"Quintillion"</string>
    <string name="A5">"McMurdo Dry Valleys, Antarctica"</string>
    <string name="A6">"Atacama Desert, South America"</string>
    <string name="A7">"Death Valley, North America"</string>
    <string name="A8">"Sahara Desert, Africa"</string>
    <string name="A9">"All of the below"</string>
    <string name="A10">"None of the below"</string>
    <string name="A11">"All of the above"</string>
    <string name="A12">"One of the above"</string>
    <string name="A13">"None of the above"</string>
    <string name="A14">"None of the above"</string>
    <string name="win">"YOU WON!!"</string>
    <string name="lost">"YOU LOST!!"</string>
    <string name="player_took">"PLAYER TOOK "</string>
    <string name="enemy_took">"ENEMY TOOK "</string>
    <string name="damage">" DAMAGE"</string>
    <string name="start_game">"Start Game"</string>
    <string name="resume_game">"Resume Game"</string>
    <string name="score">"TOTAL SCORE: "</string>
    <string name="game">"GAMES: "</string>
    <string name="life">"LIVES: "</string>
    <string name="attack">"ATTACK"</string>
    <string name="defend">"DEFEND"</string>
    <string name="player">"PLAYER"</string>
    <string name="enemy">"ENEMY"</string>
    <string name="hp">" HP: "</string>
    <string name="game_over">"Game Over"</string>
    <string name="Choose_icon">Choose Icon</string>
    <string name="male_icon">Male</string>
    <string name="female_icon">Female</string>
    <string name="robot_icon">Robot</string>
</resources>
