<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game1.GameOverActivity">

    <Button
        android:id="@+id/game1Button11"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="416dp"
        android:onClick="toMainMenu"
        android:text="@string/next3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game1Button10"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="296dp"
        android:onClick="nextGame"
        android:text="@string/next1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game1Button9"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="184dp"
        android:onClick="toHome"
        android:text="@string/game1_Home"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game1Button8"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="68dp"
        android:onClick="retry"
        android:text="@string/gane1_retry"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>