<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/settingsButton_MainActivity"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:onClick="openOptions"
        android:text="@string/Option"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createButton_MainActivity" />

    <Button
        android:id="@+id/inputButton_MainActivity"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="40dp"
        android:onClick="startGame"
        android:text="@string/select_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountNameText_MainActivity" />

    <Button
        android:id="@+id/createButton_MainActivity"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="40dp"
        android:onClick="createAccount"
        android:text="@string/create_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputButton_MainActivity" />

    <EditText
        android:id="@+id/accountNameText_MainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="106dp"
        android:ems="10"
        android:hint="@android:string/autofill"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/title_activity_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_MainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="11dp"
        android:textColor="@color/background1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountNameText_MainActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>